# learning_main

./: .gitignore  README.md  requirements-test.txt  setup.cfg
.github/workflows/: learn-github-actions.yml  pylint.yml  python-app.yml
src/moduleA/: __init__.py  __main__.py  moduleA.py
src/packageA/: __init__.py  __main__.py  moduleA.py  moduleB.py
tests/: test_moduleA.py
