[metadata]
name = learning_main
version = 0.0.1
author = John Vorsten
author_email = vorstenjohn@gmail.com
description = Differentiate usage of __main__, __main__.py, and python -m module
long_description = What is the correct way for setting up entrypoints to a python module?
long_description_content_type = text/markdown
url = https://github.com/johnvorsten/learning_main
project_urls = 
    Bug Tracker = https://github.com/johnvorsten/learning_main/issues
classifiers = 
    Programming Language :: Python :: 3

[options]
package_dir = 
    = src
packages = find:
python_required = >=3.7

[options.packages.find]
where = src


